--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     min-width: 320px;
 }
 
+#main {
+    width: 80%;
+}
+
 @media screen and (orientation: portrait) and (max-width: 1280px) {
     body {
         flex-direction: column-reverse;
