style.css: minor color fix

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ li {
 }
 
 @media (prefers-color-scheme: dark) {
-    #main {
+    body, #main {
         color: white;
         background-color: #032436;
     }
